# Quizify

./: .gitignore  README.md  READ_ME.md  READ_ME_Detailed.md  vercel.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  supabase_client.py
backend/app/services/: agent_graph.py  extraction_service.py  mentor_service.py  repository.py
backend/supabase/: schema.sql
frontend-mob/: .gitignore  README.md  pubspec.yaml
frontend-mob/android/app/src/main/: AndroidManifest.xml
frontend-mob/ios/Runner/: Info.plist
frontend-mob/lib/: main.dart
frontend-mob/lib/core/: api_client.dart  app_env.dart  app_theme.dart
frontend-mob/lib/models/: app_models.dart
frontend-mob/lib/screens/: auth_page.dart  home_shell.dart  progress_screen.dart  query_screen.dart  quiz_screen.dart  review_screen.dart  upload_screen.dart
frontend-mob/lib/services/: auth_service.dart
frontend-mob/lib/utils/: text_formatting.dart  ui_components.dart
frontend-mob/test/: widget_test.dart
frontend-web/: index.html  package-lock.json  package.json
frontend-web/src/: App.css  App.jsx  index.css
test/: Astronomy.docx  Gaming.txt
